Sun Sep 14 22:32:57 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* : update danish translation and adjust a few strings

Thu Sep  4 15:18:09 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtk-multiview.[ch]: port to g_object

Tue Sep  2 23:05:52 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkcolour.c, gtkcolour.h, gtkprefs.c, gtkprefs.h,
	board3d/gtkcolour3d.c, board3d/misc3d.h, board3d/inc3d.h: use the
	gtk_color_button, rather than designing our own.

Tue Aug 12 19:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* board3d files, removed total.bmp: Replace totoal.bmp with text in graph

Mon Aug 11 10:48:21 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gnubgmodule.c, gtkcube.c, gtkgame.c, gtkgamelist.c, set.c:
	update a few strings for translation.

Sun Aug 10 01:35:06 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtktempmap.c: improve a bit on  printing of equties and best moves

Thu Aug  7 15:28:33 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in: add options to disable deprecated glib/gtk functions
	* gtkgame.c, gtktempmap.c: replace gtk_object_weakref with
	g_object_weakref

Thu Aug  7 15:19:09 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* board3d/gtkcolour3d.c: replace a gtk_combo with a gtk_combo_box
	* gtkgame.c, gtkrace.c, gtkrelational.c, gtktheory.c: g_object_unref
	the gtktreemodel in a couple of places where forgotten

Wed Jul 30 20:27:26 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h: issue warning if libintl.h is included too early to
	avoid libintl_printf warnings under mingw.

Wed Jul 30 17:01:07 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c, gtkchequer.c, gtkcube.c, gtkgame.c, gtkgame.h,
	gtkgamelist.c, gtkmovefilter.c, gtkmovelist.c, gtkpanels.c,
	gtkprefs.c, gtksplash.c, gtktempmap.c, gtktoolbar.h, gtkwindows.c:
	more deprecated gtk functions

Wed Jul 30 13:20:05 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c, gtkgame.c, gtkgame.h, gtkoptions.c, gtkpanels.c,